--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "name": "dokay-heberg",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
